– Fixed bug: missing responsive presentation for module area when ROW set to show columns without spacing.

--- a/css/frontend/main.css
+++ b/css/frontend/main.css
@@ -1084,7 +1084,8 @@ body.dslca-enabled #dslc-content .dslc-post:first-child .dslc-post-thumb .dslc-o
 /* Smartphone */
 @media only screen and ( max-width: 767px ) {
 
-	.dslc-col {
+	.dslc-col,
+	.dslc-no-columns-spacing .dslc-col {
 		width: 100%;
 		margin: 0;
 		/*margin-bottom: 30px;*/
